# rt-thread-bsp-swm181CBT6-LuatOS

./: .config  .gitattributes  CMakeLists.txt  Kconfig  README.md  SWM181.svd  project.uvopt  project.uvproj  project.uvprojx  rtconfig.h  rtconfig.py  swm181.cfg  template.uvoptx  template.uvproj  template.uvprojx
applications/: main.c
drivers/: Kconfig  SConscript  board.c  board.h  drv_adc.c  drv_can.c  drv_can.h  drv_gpio.c  drv_gpio.h  drv_hwtimer.c  drv_i2c.c  drv_pwm.c  drv_rtc.c  drv_spi.c  drv_uart.c  drv_wdt.c
drivers/linker_scripts/: link.icf  link.lds
libraries/: SConscript
libraries/CMSIS/DeviceSupport/startup/gcc/: startup_SWM181.s
